--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 *.zip
 *.epub
+livro.html
+src.*
+all.md
+tmp*
+tmp/*
 
 # Created by https://www.gitignore.io/api/vim,osx,linux,emacs,windows,sublimetext
 # Edit at https://www.gitignore.io/?templates=vim,osx,linux,emacs,windows,sublimetext
