--- a/src/meta.yml
+++ b/src/meta.yml
@@ -1,4 +1,4 @@
-title: "Computadores Pessoais: Interfaces e História"
+title: "Computadores Pessoais"
 author: "G. V. N. Queiroz"
 date: 2019
 lang: pt-BR
